--- a/index.html
+++ b/index.html
@@ -8,6 +8,36 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Ola</h1>
+   <section class="hero">
+    <div class="hero__content">
+        <h1 class="hero__content__brand">
+            <img src="./dist/images/disneyplus.svg" alt="Disney">
+        </h1>
+        <h3 class="title--small">
+            Melhores histórias em um só lugar
+        </h3>
+        <p>
+            <a href="" class="link-text">Assinar o disney plus</a><br>
+            <span class="text">
+                R$ 27,90 por mês
+            </span>
+        </p>
+        <ul class="hero__content__combos">
+            <li class="hero__content__combos__combo">
+                <img src="./dist/images/logos/disney_star_plus.png" alt="disney-plus">
+                <button>Assine agora</button>
+                <span class="text">R$ 45,90 por mês</span>
+            </li>
+            <li class="hero__content__combos__combo">
+                <img src="./dist/images/logos/disney_star_plus.png" alt="disney-plus">
+                <button>Assine agora</button>
+                <span class="text">R$ 45,90 por mês</span>
+            </li>
+        </ul>
+        <p class="text--small">
+            O preço pode variar de acordo com a assinatura
+        </p>
+    </div>
+   </section>
 </body>
 </html>
