criando listagem de assinaturas

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
         <ul class="hero__content__combos">
             <li class="hero__content__combos__combo">
                 <img src="./dist/images/logos/disney_star_plus.png" alt="disney-plus">
-                <button>Assine agora</button>
+                <button class="button">Assine agora</button>
                 <span class="text">R$ 45,90 por mês</span>
             </li>
             <li class="hero__content__combos__combo">
                 <img src="./dist/images/logos/disney_star_plus.png" alt="disney-plus">
-                <button>Assine agora</button>
+                <button class="button">Assine agora</button>
                 <span class="text">R$ 45,90 por mês</span>
             </li>
         </ul>
@@ -111,6 +111,42 @@
     </ul>
 
    </section>
+
+   <section class="plans">
+    <h2 class="title--big">
+        Escolha seu plano
+    </h2>
+    <ul class="plans__list">
+        <li class="plans__list__item">
+            <img src="./dist/images/logos/disneyplus_underline.png"/>
+            <strong class="title--small">R$ 27,90 por mês</strong>
+            <p  class="text--big">
+                No Disney+ você encontra as últimas estreias do cinema, originais e classicos inesquecíveis
+            </p>
+            <button class="button">Assine agora</button>
+        </li>
+        <li class="plans__list__item">
+            <img src="./dist/images/logos/disney_star_plus_sm.png"/>
+            <strong class="title--small">R$ 45,90 por mês</strong>
+            <p  class="text--big">
+                No Disney+ você encontra as últimas estreias do cinema, originais e classicos inesquecíveis
+            </p>
+            <button class="button">Assine agora</button>
+        </li>
+        <li class="plans__list__item">
+            <img src="./dist/images/logos/disney_star_plus_starzplay_underline.png"/>
+            <strong class="title--small">R$ 55,90 por mês</strong>
+            <p  class="text--big">
+                No Disney+ você encontra as últimas estreias do cinema, originais e classicos inesquecíveis
+            </p>
+            <button class="button">Assine agora</button>
+        </li>
+    </ul>
+    <p class="text--small">
+        O preço podera variar de acordo com o plano escolhido
+    </p>
+   </section>
+
 
    <script src="./src/main.js">
 
