--- a/index.html
+++ b/index.html
@@ -147,6 +147,16 @@
     </p>
    </section>
 
+   <section class="watch-anywhere">
+    <img src="./dist/images/tv_pc_tablet_celular.png" alt="">
+    <div class="watch-anywhere__content">
+        <h2 class="title">Assista do seu jeito</h2>
+        <p class="text--big">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam aliquam numquam, cum ut tempora corrupti quis ea. 
+            Deserunt aut iusto eius. Voluptates fugiat aliquid officia? Consequuntur animi nihil obcaecati officia.
+        </p>
+    </div>
+   </section>
 
    <script src="./src/main.js">
 
