--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
     </p>
    </section>
 
-   <section class="watch-anywhere">
+   <section class="image-text-section">
     <img src="./dist/images/tv_pc_tablet_celular.png" alt="">
-    <div class="watch-anywhere__content">
+    <div class="image-text-section__content">
         <h2 class="title">Assista do seu jeito</h2>
         <p class="text--big">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam aliquam numquam, cum ut tempora corrupti quis ea. 
@@ -157,7 +157,84 @@
         </p>
     </div>
    </section>
-
+   <section class="image-text-section  image-text-section--image-full-width">
+    <img src="./dist/images/fundo_rei_leao.png" alt="">
+    <div class="image-text-section__content image-text-section--image-full-width__content">
+        <h2 class="title">Filmes e séries</h2>
+        <p class="text--big">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Veniam aliquam numquam, cum ut tempora corrupti quis ea. 
+           
+        </p>
+    </div>
+   </section>
+   <section class="devices">
+    <h2 class="title">
+        Disponivel nos seus dispositivos favoritos
+    </h2>
+    <ul class="devices__list">
+        <li class="devices__list__item">
+            <img src="./dist/images/dispositivos/computador.png" alt="">
+            <h4 class="title--small">Computador</h4>
+            <ul class="text">
+                <li>
+                    ChromeOs
+                </li>
+                <li>
+                    MacOS
+                </li>
+                <li>
+                    PcWindows
+                </li>
+            </ul>
+        </li>
+        <li class="devices__list__item">
+            <img src="./dist/images/dispositivos/tv.png" alt="">
+            <h4 class="title--small">TV</h4>
+            <ul class="text">
+                <li>
+                    Amazon Fire
+                </li>
+                <li>
+                    Android tv
+                </li>
+                <li>
+                    Ivs lg
+                </li>
+            </ul>
+        </li>
+        <li class="devices__list__item">
+            <img src="./dist/images/dispositivos/videogames.png" alt="">
+            <h4 class="title--small">VideoGames</h4>
+            <ul class="text">
+                <li>
+                    PS5
+                </li>
+                <li>
+                    PS4
+                </li>
+                <li>
+                    XBOX
+                </li>
+            </ul>
+        </li>
+        <li class="devices__list__item">
+            <img src="./dist/images/dispositivos/celular.png" alt="">
+            <h4 class="title--small">Celular</h4>
+            <ul class="text">
+                <li>
+                    tablet e amazon fire
+                </li>
+                <li>
+                    Android
+                </li>
+                <li>
+                    Iphone e ipad
+                </li>
+            </ul>
+        </li>
+    </ul>
+   </section>
    <script src="./src/main.js">
 
    </script>
