--- a/index.html
+++ b/index.html
@@ -8,11 +8,26 @@
     <title>Document</title>
 </head>
 <body>
+    <header class="header">
+        <div class="header__container">
+            <h1>
+                <img class="header__logo" src="./dist/images//disneyplus.svg" alt="Disney">
+            </h1>
+            <ul class="header__links">
+                <li  class="header__links__item ">
+                    <a class="button button--sec" href="">Assine agora</a>
+                </li>
+                <li class="header__links__item">
+                    <a class="button button--dark" href="">Entrar</a>
+                </li>
+            </ul>
+        </div>
+    </header>
    <section class="hero">
     <div class="hero__content">
-        <h1 class="hero__content__brand">
+        <div class="hero__content__brand">
             <img src="./dist/images/disneyplus.svg" alt="Disney">
-        </h1>
+        </div>
         <h3 class="title--small">
             Melhores histórias em um só lugar
         </h3>
@@ -236,8 +251,93 @@
         </li>
     </ul>
    </section>
-   <script src="./src/main.js">
+   <section class="faq">
+    <h1 class="title">Perguntas frequentes</h1>
+    <ul class="faq__questions">
+        <li class="faq__questions__items">
+            <div data-faq-question class="faq__questions__items__question">
+                pergunta?
+            </div>
+            <div class="faq__questions__items__answer text--big">
+                    A resposta da pergunta
+            </div>
+        </li>
+        <li class="faq__questions__items">
+            <div data-faq-question class="faq__questions__items__question">
+                pergunta?
+            </div>
+            <div class="faq__questions__items__answer text--big">
+                    A resposta da pergunta
+            </div>
+        </li>
+        <li class="faq__questions__items">
+            <div data-faq-question class="faq__questions__items__question">
+                pergunta?
+            </div>
+            <div class="faq__questions__items__answer text--big">
+                    A resposta da pergunta
+            </div>
+        </li>
+        <li class="faq__questions__items">
+            <div data-faq-question class="faq__questions__items__question">
+                pergunta?
+            </div>
+            <div class="faq__questions__items__answer text--big">
+                    A resposta da pergunta
+            </div>
+        </li>
+    </ul>
+   </section>
+   <footer class="footer">
+    <div class="footer__container">
+        <img class="footer__logo" src="./dist/images/disneyplus.svg" alt="disney+">
 
+        <ul class="footer__links">
+            <li class="footer__links__item">
+                <div class="selector-language">
+                    <img src="./dist/images/icones/globe.svg" alt="globe">
+                <select >
+                     <option>
+                         English
+                     </option>
+                     <option selected>
+                         Português
+                     </option>
+                </select>
+                </div>
+            </li>
+            <li class="footer__links__item">
+                <a class="text--small" href="">Termos e consdições de uso</a>
+            </li>
+            <li class="footer__links__item">
+                <a class="text--small" href="">Política de privacidade</a>
+            </li>
+            <li class="footer__links__item">
+                <a class="text--small" href="">Proteção de dados no brasil</a>
+            </li>
+            <li class="footer__links__item">
+                <a class="text--small" href="">Anúncios personalizados</a>
+            </li>
+            <li class="footer__links__item">
+                <a class="text--small" href="">Ajuda</a>
+            </li>
+            <li class="footer__links__item">
+                <a class="text--small" href="">Sobre o disney+</a>
+            </li>
+        </ul>
+        <p class="text--small">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore, quibusdam? 
+        </p>
+        <p class="text--small">
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore, quibusdam? Autem ipsum commodi architecto hic repudiandae 
+            nihil est possimus minus fugit? Fugiat, dignissimos. Est repellat molestias aut ducimus eligendi dolores?
+    
+        </p>
+    </div>
+   </footer>
+
+   <script src="./src/main.js">
+    
    </script>
 </body>
 </html>
