--- a/index.html
+++ b/index.html
@@ -173,7 +173,10 @@
     </div>
    </section>
    <section class="image-text-section  image-text-section--image-full-width">
+  <picture>
+    <source media="(max-width:768px)" srcset="./dist/images/fundo_rei_leao_celular.png"/>
     <img src="./dist/images/fundo_rei_leao.png" alt="">
+  </picture>
     <div class="image-text-section__content image-text-section--image-full-width__content">
         <h2 class="title">Filmes e séries</h2>
         <p class="text--big">
