--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
     </div>
    </footer>
 
-   <script src="./src/main.js">
+   <script src="./src/scripts/main.js">
     
    </script>
 </body>
